DFR-2636 fixing interim hearing